--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Digital Store</title>
 </head>
 <body>
-    
+    <header></header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer></footer>
 </body>
 </html>
