--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Store</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header></header>
 
@@ -21,6 +24,63 @@
 
 
 
-    <footer></footer>
+    <footer>
+
+        <div class="sera">
+
+            <div class="logod">
+                <img src="images/logo digital.png" alt="">
+
+                <div class="lorem">
+                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor
+                        <br>incididunt ut labore et dolore.
+                    </p>
+                </div>
+
+
+                <div class="logos">
+                    <a href=""><img src="images/black-facebook-logo.png" alt=""></a>
+                    <a href=""><img src="images/black-instagram.png" alt=""></a>
+                    <a href=""><img src="images/twiter-logo.png" alt=""></a>
+
+
+                </div>
+
+            </div>
+
+            <div class="informaçao">
+                <h3>Informação</h3>
+                <p>Sobre Drip Store</p>
+                <p>Segurança</p>
+                <p>Wishlist</p>
+                <p>Blog</p>
+                <p>Trabalhe conosco</p>
+                <p>Meus Pedidos</p>
+
+            </div>
+
+            <div class="categoria">
+                <h3>Categorias</h3>
+                <p>Camisetas</p>
+                <p>Calças</p>
+                <p>Bonés</p>
+                <p>Headphones</p>
+                <p>Tênis</p>
+            </div>
+
+            <div class="contato">
+                <h3>Contato</h3>
+                <p>Av. Santos Dumont, 1510-1 andar Aldeota, Fortaleza -CE, 60150-161</p>
+                <p>(85) 3051-3411</p>
+            </div>
+        </div>
+
+        <hr style="border-top: 2px solid #ccc; margin: 20px;">
+
+        <div class="copy"> &copy; 2025 Digital College</div>
+
+
+    </footer>
 </body>
+
 </html>
