--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img src="images/Vector.png" alt="">
+            <H1>Digital Store</H1>
+            <div class="search-bar">
+                <input type="text" placeholder="Buscar...">
+            </div>
+            <a href="">Cadastre-se</a>
+
+        <button>Entrar</button>
+        </div>
+
+        <nav>
+
+            <a href="#home">Home</a>
+            <a href="#produto">Produtos</a>
+            <a href="#categoria">Categoria</a>
+            <a href="#meuspedidos">Meus Pedidos</a>
+        </nav>
+
+    </header>
 
 
 
