--- a/index.html
+++ b/index.html
@@ -11,22 +11,28 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/Vector.png" alt="">
-            <H1>Digital Store</H1>
-            <div class="search-bar">
+            <img src="" alt="">
+            <!-- <img src="images/Vector.png" alt="">
+            <H1>Digital Store</H1> -->
+            <!-- <div class="search-bar">
                 <input type="text" placeholder="Buscar...">
-            </div>
+            </div> -->
             <a href="">Cadastre-se</a>
 
         <button>Entrar</button>
         </div>
 
         <nav>
-
-            <a href="#home">Home</a>
-            <a href="#produto">Produtos</a>
-            <a href="#categoria">Categoria</a>
-            <a href="#meuspedidos">Meus Pedidos</a>
+            <ul class="itens">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#produto">Produtos</a></li>
+                <li><a href="#categoria">Categoria</a></li>
+                <li><a href="#meuspedidos">Meus Pedidos</a></li>
+                <div class="search-bar">
+                    <input type="text" placeholder="Pesquisar...">
+                    <button type="submit">🔍</button>
+                </div>
+            </ul>
         </nav>
 
     </header>
