--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="" alt="">
-            <!-- <img src="images/Vector.png" alt="">
-            <H1>Digital Store</H1> -->
-            <!-- <div class="search-bar">
-                <input type="text" placeholder="Buscar...">
-            </div> -->
-            <a href="">Cadastre-se</a>
+        <div class="inicio">
+            <div class="imagem-principal">
+                <img src="images/logo.png" alt="">
+            </div>
+            <div class="search-bar">
 
-        <button>Entrar</button>
-        </div>
+                <input id="barraPesquisa" type="text" placeholder="Pesquisar produto..." style="font-size: medium;">
 
-        <nav>
-            <ul class="itens">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#produto">Produtos</a></li>
-                <li><a href="#categoria">Categoria</a></li>
-                <li><a href="#meuspedidos">Meus Pedidos</a></li>
-                <div class="search-bar">
-                    <input type="text" placeholder="Pesquisar...">
-                    <button type="submit">🔍</button>
-                </div>
-            </ul>
-        </nav>
+                <input  id="botaoLupa" type="button" value="">
+             
+            </div>
+            <div class="itens-cadastro">
+                <a id="cadastro" class="links" href="/Cadastro"
+                    style="font-family: Arial, Helvetica, sans-serif;">Cadastre-se</a>
+
+                <a href="/Login"><input id="botaoEntrar" type="button" value="Entrar"></a>
+
+                <a id="iconeCarrinho" href="#carrinho">
+                    <div id="bolinhaCarrinho"></div>
+                </a>
+
+
 
     </header>
 
