--- a/pagina1.html
+++ b/pagina1.html
@@ -54,16 +54,19 @@
                 <div class="carousel-item active">
                     <img src="images/Rectangle 7.png" class="d-block w-100" alt="...">
 
-                    <img class="tenis_banner"  src="images/White-Sneakers-PNG-Clipart 1.png" alt="">
+                    <img class="tenis_banner" src="images/White-Sneakers-PNG-Clipart 1.png" alt="">
+                    <img class="ornamento" src="images/Ornament 11.png" alt="">
 
                     <div class="texto_na_imagem">
                         <p class="oferta">Melhores ofertas personalizadas</p>
-                        <h1>Queima de 
-                            <br>stoque Nike 🔥</h1>
-                        <p>Consequat culpa exercitation mollit nisi excepteur do do tempor laboris eiusmod irure
+                        <h1>Queima de
+                            <br>stoque Nike 🔥
+                        </h1>
+                        <p>Consequat culpa exercitation mollit nisi excepteur do
+                            <br> do tempor laboris eiusmod irure
                             consectetur.
                         </p>
-                        <button>Ver Ofertas</button>
+                        <button  class="botao1">Ver Ofertas</button>
                     </div>
                 </div>
                 <div class="carousel-item">
