--- a/pagina2.html
+++ b/pagina2.html
@@ -25,7 +25,7 @@
 
 
                 <div class="logos">
-                    <a href="" style="width: 10.92px; height: 20.53px;"><img src="images/logo facebook.png" alt=""></a>
+                    <a href=""><img src="images/logo facebook.png" alt=""></a>
                     <a href=""><img src="images/logo instagram.png" alt=""></a>
                     <a href=""><img src="images/logo twitter.png" alt=""></a>
                 </div>
@@ -45,7 +45,7 @@
 
             <div class="categoria">
                 <h3 class="h3tit">Categorias</h3>
-                <p>Camisetas</p>
+                <p style=" cursor: pointer; " class="rea">Camisetas</p>
                 <p>Calças</p>
                 <p>Bonés</p>
                 <p>Headphones</p>
@@ -65,5 +65,8 @@
         </div>
     </footer>
 </body>
+
+
+
 
 </html>
