--- a/pagina1.html
+++ b/pagina1.html
@@ -66,7 +66,7 @@
                             <br> do tempor laboris eiusmod irure
                             consectetur.
                         </p>
-                        <button  class="botao1">Ver Ofertas</button>
+                        <button class="botao1">Ver Ofertas</button>
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -98,7 +98,36 @@
 
     </section>
 
+    <section>
 
+        <h3>Coleções em destaque</h3>
+
+        <div class="coleçoes">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Novo drop Supreme</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Coleção Adidas</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Novo Beats Bass</h5>
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
