correção nos cards

--- a/pagina1.html
+++ b/pagina1.html
@@ -100,30 +100,34 @@
 
     <section>
 
-        <h3>Coleções em destaque</h3>
+        <p class="textocolecao">Coleções em destaque</p>
 
         <div class="coleçoes">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Novo drop Supreme</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                     <h5 class="card-title">Novo drop Supreme</h5>
+                    <img class="blusa"
+                        src="images/star-wars-storm-trooper-supreme-shirts-supreme-t-shirt-snoopy-clothing-apparel-t-shirt-text-transparent-png-616696 1@2x.png"
+                        alt="">
+                   
+
+                    <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Coleção Adidas</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <img class="blusa" src="images/ddd 1.png" alt="">
+                    <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Novo Beats Bass</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <img class="blusa" src="images/d9db11953a2d185d37246bb1f500c957 1.png" alt="">
+                    <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
                 </div>
             </div>
         </div>
