--- a/pagina1.html
+++ b/pagina1.html
@@ -103,30 +103,36 @@
         <p class="textocolecao">Coleções em destaque</p>
 
         <div class="coleçoes">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 405px; height: 251px;">
                 <div class="card-body">
-                     <h5 class="card-title">Novo drop Supreme</h5>
-                    <img class="blusa"
+                    <div> <P>30%OFF</P></div>
+                    <h5 class="card-title">Novo drop <br>
+                        Supreme</h5>
+                    <div><img class="blusa"
                         src="images/star-wars-storm-trooper-supreme-shirts-supreme-t-shirt-snoopy-clothing-apparel-t-shirt-text-transparent-png-616696 1@2x.png"
-                        alt="">
-                   
+                        alt=""></div>
+
 
                     <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 405px; height: 251px;">
                 <div class="card-body">
-                    <h5 class="card-title">Coleção Adidas</h5>
-                    <img class="blusa" src="images/ddd 1.png" alt="">
+                    <div> <P>30%OFF</P></div>
+                    <h5 class="card-title">Coleção <br>
+                         Adidas</h5>
+                    <div><img class="blusa" src="images/ddd 1.png" alt=""></div>
                     <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
                 </div>
             </div>
 
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 405px; height: 251px;">
                 <div class="card-body">
-                    <h5 class="card-title">Novo Beats Bass</h5>
-                    <img class="blusa" src="images/d9db11953a2d185d37246bb1f500c957 1.png" alt="">
+                    <div> <P>30%OFF</P></div>
+                    <h5 class="card-title">Novo <br>
+                         Beats Bass</h5>
+                    <div><img class="blusa" src="images/d9db11953a2d185d37246bb1f500c957 1.png" alt=""></div>
                     <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
                 </div>
             </div>
