--- a/cadastro.html
+++ b/cadastro.html
@@ -13,5 +13,59 @@
             <h1>Crie sua conta</h1>
         </form>
     </section>
+
+    <footer>
+
+        <div class="sera">
+
+            <div class="logod">
+                <img src="images/logo digital.png" alt="">
+
+                <div class="lorem">
+                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor
+                        <br>incididunt ut labore et dolore.
+                    </p>
+                </div>
+
+
+                <div class="logos">
+                    <a href=""><img src="images/logo facebook.png" alt=""></a>
+                    <a href=""><img src="images/logo instagram.png" alt=""></a>
+                    <a href=""><img src="images/logo twitter.png" alt=""></a>
+                </div>
+
+            </div>
+
+            <div class="informaçao">
+                <h3>Informação</h3>
+                <p>Sobre Drip Store</p>
+                <p>Segurança</p>
+                <p>Wishlist</p>
+                <p>Blog</p>
+                <p>Trabalhe conosco</p>
+                <p>Meus Pedidos</p>
+
+            </div>
+
+            <div class="categoria">
+                <h3 class="h3tit">Categorias</h3>
+                <p style=" cursor: pointer; " class="rea">Camisetas</p>
+                <p>Calças</p>
+                <p>Bonés</p>
+                <p>Headphones</p>
+                <p>Tênis</p>
+            </div>
+            <div class="contato">
+                <h3 class="h3tit">Contato</h3>
+                <p>Av. Santos Dumont, 1510-1 andar Aldeota, Fortaleza -CE, 60150-161</p>
+                <p>(85) 3051-3411</p>
+            </div>
+        </div>
+
+        <div class="divFinal">
+            <hr style="min-width: 1240px; width: 16px 0px 23px;margin-bottom: 23px;background-color: #ffffff4d;">
+            <p class="copy"> &copy; 2025 Digital College</p>
+        </div>
+    </footer>
 </body>
 </html>
