--- a/cadastro.html
+++ b/cadastro.html
@@ -13,6 +13,10 @@
         <form action="">
             <h1>Crie sua conta</h1>
         </form>
+        <div class="tenis">
+            <img src="images/Tenis1.png" alt="">
+            <img class="imgt" src="images/Tenis2.png" alt="">
+        </div>
     </section>
 
     <footer>
