cursor pointer no footer

--- a/pagina1.html
+++ b/pagina1.html
@@ -222,7 +222,7 @@
 
             <div class="categoria">
                 <h3 class="h3tit">Categorias</h3>
-                <p style=" cursor: pointer; " class="rea">Camisetas</p>
+                <p>Camisetas</p>
                 <p>Calças</p>
                 <p>Bonés</p>
                 <p>Headphones</p>
