Pagina de Cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,37 @@
     <link rel="stylesheet" href="cadastro.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
+
 <body>
-    
+
     <section id="cad">
+
         <form action="">
-            <h1>Crie sua conta</h1>
+
+            <div class="formulario">
+                <h1>Crie sua conta</h1>
+                <div>
+                    <h5>Email*</h5>
+                    <input type="text">
+                </div>
+
+
+
+
+                <div class="outras-formas-de-se-cadastrar">
+                    <p>Ou faça login com</p>
+                    <a href=""><img src="images/gmail 1.png" alt=""></a>
+                    <a href=""><img src="images/facebook 1.png" alt=""></a>
+                </div>
+            </div>
+
         </form>
+
         <div class="tenis">
-            <img src="images/Tenis1.png" alt="">
-            <img class="imgt" src="images/Tenis2.png" alt="">
+
+            <img class="imgt" src="images/Tenis1.png" alt="">
+            <img class="imgt2" src="images/Tenis2.png" alt="">
+
         </div>
     </section>
 
@@ -73,4 +96,5 @@
         </div>
     </footer>
 </body>
+
 </html>
