refiz alguns itens

--- a/principal.html
+++ b/principal.html
@@ -55,7 +55,7 @@
         </div>
 
         <div><img src="images/fone.png" alt="">
-            <p>Fone</p>
+            <p>Headphones</p>
         </div>
         <div><img src="images/teniscolecao.png" alt="">
             <p>Tenis</p>
