--- a/cadastro.html
+++ b/cadastro.html
@@ -17,9 +17,10 @@
 
             <div class="formulario">
                 <h1>Crie sua conta</h1>
+                <p>Já possui uma conta? Entre <a href="cadastro.html" style="color: ;">aqui</a>.</p>
                 <div>
                     <h5>Email*</h5>
-                    <input type="text">
+                    <input type="text" placeholder="Insira seu email" style="font-size: medium; margin-left: 20px;">
                 </div>
 
 
