--- a/pagina1.html
+++ b/pagina1.html
@@ -18,29 +18,17 @@
                 <img src="images/logo.png" alt="">
             </div>
             <div class="search-bar">
-
                 <input id="barraPesquisa" type="text" placeholder="Pesquisar produto..." style="font-size: medium;">
-
-
-
             </div>
             <div class="itens-cadastro">
                 <a id="cadastro" class="links" href="/Cadastro"
                     style="font-family: Arial, Helvetica, sans-serif;">Cadastre-se</a>
-
                 <a href="/Login"><input id="botaoEntrar" type="button" value="Entrar"></a>
-
                 <a id="iconeCarrinho" href="#carrinho">
                     <div id="bolinhaCarrinho"></div>
                 </a>
-
-
-
             </div>
-
-
-
-
+        </div>
     </header>
 
 
@@ -77,7 +65,7 @@
                     <div class="texto_na_imagem">
                         <p class="oferta">Melhores ofertas personalizadas</p>
                         <h1>Queima de
-                            <br>stoque Nike 
+                            <br>stoque Nike
                             <img src="images/fogoIphone.png" alt="">
                         </h1>
                         <p>Consequat culpa exercitation mollit nisi excepteur do
@@ -130,9 +118,7 @@
                     </div>
                     <h5 class="card-title">Novo drop <br>
                         Supreme</h5>
-                    <div><img class="blusa"
-                            src="images/blusaSupreme.png"
-                            alt=""></div>
+                    <div><img class="blusa" src="images/blusaSupreme.png" alt=""></div>
 
 
                     <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
