--- a/principal.html
+++ b/principal.html
@@ -38,11 +38,40 @@
 
 
 
+           
+
+
 
 
     </header>
 
-    <div id="colecoes">
+    <div class="linksheader">
+        <a href="">Home</a>
+        <a href="" class="links" >Produtos</a>
+        <a href="" class="links" >Categorias</a>
+        <a href="" class="links">Meus Produtos</a>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div id="colecoes">
         <h3 style="font-family: sans-serif;">Coleções em Destaque</h3>
     </div>
     <div id="imagens-colecao">
@@ -60,7 +89,7 @@
         <div><img src="images/teniscolecao.png" alt="">
             <p>Tenis</p>
         </div>
-    </div>
+    </div> -->
 
 
 
