--- a/pagina1.html
+++ b/pagina1.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="pagina1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
 
 <body>
@@ -119,9 +121,7 @@
                     <h5 class="card-title">Novo drop <br>
                         Supreme</h5>
                     <div><img class="blusa" src="images/blusaSupreme.png" alt=""></div>
-
-
-                    <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
+                    <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
 
