--- a/cadastro.html
+++ b/cadastro.html
@@ -12,59 +12,41 @@
 <body>
 
     <section id="cad">
-
         <form action="">
-
             <div class="formulario">
                 <h1>Crie sua conta</h1>
-                <p>Já possui uma conta? Entre <a href="cadastro.html" style="color: ;">aqui</a>.</p>
+                <p>Já possui uma conta? Entre <a href="cadastro.html" style="color: rgba(71, 71, 71, 1);">aqui</a>.</p>
                 <div>
                     <h5>Email*</h5>
-                    <input type="text" placeholder="Insira seu email" style="font-size: medium; margin-left: 20px;">
+                    <input type="text" placeholder="Insira seu email" style="font-size: medium; margin: ;">
                 </div>
-
-
-
-
                 <div class="outras-formas-de-se-cadastrar">
                     <p>Ou faça login com</p>
                     <a href=""><img src="images/gmail 1.png" alt=""></a>
                     <a href=""><img src="images/facebook 1.png" alt=""></a>
                 </div>
             </div>
-
         </form>
-
         <div class="tenis">
-
             <img class="imgt" src="images/Tenis1.png" alt="">
             <img class="imgt2" src="images/Tenis2.png" alt="">
-
         </div>
     </section>
-
     <footer>
-
         <div class="sera">
-
             <div class="logod">
                 <img src="images/logo digital.png" alt="">
-
                 <div class="lorem">
                     <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor
                         <br>incididunt ut labore et dolore.
                     </p>
                 </div>
-
-
                 <div class="logos">
                     <a href=""><img src="images/logo facebook.png" alt=""></a>
                     <a href=""><img src="images/logo instagram.png" alt=""></a>
                     <a href=""><img src="images/logo twitter.png" alt=""></a>
                 </div>
-
             </div>
-
             <div class="informaçao">
                 <h3>Informação</h3>
                 <p>Sobre Drip Store</p>
@@ -73,9 +55,7 @@
                 <p>Blog</p>
                 <p>Trabalhe conosco</p>
                 <p>Meus Pedidos</p>
-
             </div>
-
             <div class="categoria">
                 <h3 class="h3tit">Categorias</h3>
                 <p style=" cursor: pointer; " class="rea">Camisetas</p>
@@ -90,12 +70,10 @@
                 <p>(85) 3051-3411</p>
             </div>
         </div>
-
         <div class="divFinal">
             <hr style="min-width: 1240px; width: 16px 0px 23px;margin-bottom: 23px;background-color: #ffffff4d;">
             <p class="copy"> &copy; 2025 Digital College</p>
         </div>
     </footer>
 </body>
-
 </html>
