--- a/pagina1.html
+++ b/pagina1.html
@@ -133,7 +133,7 @@
                     <h5 class="card-title">Coleção <br>
                         Adidas</h5>
                     <div><img class="blusa" src="images/cardTenis.png" alt=""></div>
-                    <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
+                    <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
                     <h5 class="card-title">Novo <br>
                         Beats Bass</h5>
                     <div><img class="blusa" src="images/cardFone.png" alt=""></div>
-                    <!-- <a href="#" class="btn btn-primary">Comprar</a> -->
+                    <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
         </div>
