atualização do css

--- a/pagina1.html
+++ b/pagina1.html
@@ -35,7 +35,7 @@
 
 
 
-    <section>
+    <section class="carrossel">
 
 
 
@@ -173,9 +173,10 @@
 
 
 
+
     <footer>
 
-        <div class="sera">
+        <div class="geralFooter">
 
             <div class="logod">
                 <img src="images/logo digital.png" alt="">
