coloquei linksheader e coleçoes

--- a/principal.html
+++ b/principal.html
@@ -7,6 +7,7 @@
     <title>Digital Store</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
 <body>
@@ -16,37 +17,22 @@
                 <img src="images/logo.png" alt="">
             </div>
             <div class="search-bar">
-
                 <input id="barraPesquisa" type="text" placeholder="Pesquisar produto..." style="font-size: medium;">
-
-
-
             </div>
             <div class="itens-cadastro">
                 <a id="cadastro" class="links" href="/Cadastro"
                     style="font-family: Arial, Helvetica, sans-serif;">Cadastre-se</a>
-
                 <a href="/Login"><input id="botaoEntrar" type="button" value="Entrar"></a>
-
                 <a id="iconeCarrinho" href="#carrinho">
                     <div id="bolinhaCarrinho"></div>
                 </a>
-
-
-
             </div>
-
-
-
-           
-
-
-
-
+        </div>
     </header>
 
+
     <div class="linksheader">
-        <a href="">Home</a>
+        <a href="" class="home">Home</a>
         <a href="" class="links" >Produtos</a>
         <a href="" class="links" >Categorias</a>
         <a href="" class="links">Meus Produtos</a>
@@ -71,9 +57,9 @@
 
 
 
-    <!-- <div id="colecoes">
+  
         <h3 style="font-family: sans-serif;">Coleções em Destaque</h3>
-    </div>
+    
     <div id="imagens-colecao">
         <div><img src="images/blusacoleçao.png" alt="Blusas">
             <p>Blusas</p>
@@ -89,9 +75,7 @@
         <div><img src="images/teniscolecao.png" alt="">
             <p>Tenis</p>
         </div>
-    </div> -->
-
-
+    </div>
 
 
 
