--- a/pagina1.html
+++ b/pagina1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="pagina1.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon"> 
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
 </head>
@@ -149,6 +149,114 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <h1 class="textocolecao">Produtos em alta</h1>
+            <div class="em_alta">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                    <div class="card-body tt" >
+                        <h5 class="card-title">Sapatos</h5>
+                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                        <div class="presos">
+                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="descontos">R$ 100</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                    <div class="card-body tt">
+                        <h5 class="card-title">Sapatos</h5>
+                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                        <div class="presos">
+                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="descontos">R$ 100</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                    <div class="card-body tt">
+                        <h5 class="card-title">Sapatos</h5>
+                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                        <div class="presos">
+                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="descontos">R$ 100</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card" style="width: 18rem;">
+                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                    <div class="card-body tt">
+                        <h5 class="card-title">Sapatos</h5>
+                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                        <div class="presos">
+                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="descontos">R$ 100</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="em_alta">
+            <div class="card" style="width: 18rem;">
+                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body tt" >
+                    <h5 class="card-title">Sapatos</h5>
+                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="presos">
+                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="descontos">R$ 100</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="card" style="width: 18rem;">
+                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body tt">
+                    <h5 class="card-title">Sapatos</h5>
+                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="presos">
+                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="descontos">R$ 100</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body tt">
+                    <h5 class="card-title">Sapatos</h5>
+                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="presos">
+                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="descontos">R$ 100</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body tt">
+                    <h5 class="card-title">Sapatos</h5>
+                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="presos">
+                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="descontos">R$ 100</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     </section>
 
 
