finalizando os cards dos tênis

--- a/pagina1.html
+++ b/pagina1.html
@@ -116,11 +116,11 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <P>30%OFF</P>
+                        <P>30% OFF</P>
                     </div>
                     <h5 class="card-title">Novo drop <br>
                         Supreme</h5>
-                    <div><img class="blusa" src="images/blusaSupreme.png" alt=""></div>
+                    <div><img class="imagem_dos_cards" src="images/blusaSupreme.png" alt=""></div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
@@ -128,11 +128,11 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <P>30%OFF</P>
+                        <P>30% OFF</P>
                     </div>
                     <h5 class="card-title">Coleção <br>
                         Adidas</h5>
-                    <div><img class="blusa" src="images/cardTenis.png" alt=""></div>
+                    <div><img class="imagem_dos_cards" src="images/cardTenis.png" alt=""></div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
@@ -140,26 +140,30 @@
             <div class="card">
                 <div class="card-body">
                     <div>
-                        <P>30%OFF</P>
+                        <P>30% OFF</P>
                     </div>
                     <h5 class="card-title">Novo <br>
                         Beats Bass</h5>
-                    <div><img class="blusa" src="images/cardFone.png" alt=""></div>
+                    <div><img class="imagem_dos_cards" src="images/cardFone.png" alt=""></div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
         </div>
 
+    </section>
+
+    <section>
         <div>
             <h1 class="textocolecao">Produtos em alta</h1>
             <div class="em_alta">
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                    <div class="card-body tt" >
-                        <h5 class="card-title">Sapatos</h5>
-                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="card-body body_em_alta" >
+                        <p class="promoçao_em_alta">30% OFF</p>
+                        <p class="card-title">Tênis</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="paragrafo_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -167,11 +171,12 @@
 
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                    <div class="card-body tt">
-                        <h5 class="card-title">Sapatos</h5>
-                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="card-body body_em_alta">
+                        <p class="promoçao_em_alta">30% OFF</p>
+                        <p class="card-title">Tênis</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="paragrafo_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -179,11 +184,11 @@
 
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                    <div class="card-body tt">
-                        <h5 class="card-title">Sapatos</h5>
-                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="card-body body_em_alta">
+                        <p class="card-title">Tênis</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="paragrafo_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -191,11 +196,11 @@
 
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                    <div class="card-body tt">
-                        <h5 class="card-title">Sapatos</h5>
-                        <p class="card-text">K-Swiss V8 - Masculino</p>
+                    <div class="card-body body_em_alta">
+                        <p class="card-title">Tênis</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p style="text-decoration: line-through;">R$ 200</p>
+                            <p class="paragrafo_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -206,11 +211,11 @@
         <div class="em_alta">
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body tt" >
-                    <h5 class="card-title">Sapatos</h5>
-                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                <div class="card-body body_em_alta" >
+                    <p class="card-title">Tênis</p>
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="paragrafo_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
@@ -219,11 +224,11 @@
 
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body tt">
-                    <h5 class="card-title">Sapatos</h5>
-                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                <div class="card-body body_em_alta">
+                    <p class="card-title">Tênis</p>
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="paragrafo_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
@@ -231,11 +236,11 @@
 
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body tt">
-                    <h5 class="card-title">Sapatos</h5>
-                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                <div class="card-body body_em_alta">
+                    <p class="card-title">Tênis</p>
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="paragrafo_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
@@ -243,20 +248,17 @@
 
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body tt">
-                    <h5 class="card-title">Sapatos</h5>
-                    <p class="card-text">K-Swiss V8 - Masculino</p>
+                <div class="card-body body_em_alta">
+                    <p class="card-title">Tênis</p>
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p style="text-decoration: line-through;">R$ 200</p>
+                        <p class="paragrafo_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
     </section>
 
 
