--- a/pagina1.html
+++ b/pagina1.html
@@ -152,13 +152,18 @@
 
     </section>
 
-    <section>
+    <section class="produtos_em_alta">
         <div>
-            <h1 class="textocolecao">Produtos em alta</h1>
+            <div class="titulocolecao">
+                <h1 class="textocolecao">Produtos em alta</h1>
+                <div><a class="linkcolecao" href="">Ver Todos </a>
+                <img src="images/seta.png" alt=""></div>
+            </div>
+
             <div class="em_alta">
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                    <div class="card-body body_em_alta" >
+                    <div class="card-body body_em_alta">
                         <p class="promoçao_em_alta">30% OFF</p>
                         <p class="card-title">Tênis</p>
                         <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
@@ -211,7 +216,7 @@
         <div class="em_alta">
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body body_em_alta" >
+                <div class="card-body body_em_alta">
                     <p class="card-title">Tênis</p>
                     <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
@@ -258,7 +263,7 @@
                 </div>
             </div>
         </div>
-    </div>
+        </div>
     </section>
 
 
