--- a/pagina1.html
+++ b/pagina1.html
@@ -297,7 +297,7 @@
 
 
  
- <h3 style="">Coleções em Destaque</h3>
+ <h3>Coleções em Destaque</h3>
     
     <div id="imagens-colecao">
         <div><img src="images/blusacoleçao.png" alt="Blusas">
