--- a/pagina3.html
+++ b/pagina3.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drip Store</title>
+    <title>Pagina1</title>
     <link rel="stylesheet" href="pagina3.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
+
 <body>
     <header>
         <div class="inicio">
@@ -24,6 +31,13 @@
                 </a>
             </div>
         </div>
+        <div class="linksheader">
+            <a href="" class="home">Home</a>
+            <a href="" class="links">Produtos</a>
+            <a href="" class="links">Categorias</a>
+            <a href="" class="links">Meus Produtos</a>
+        </div>
     </header>
+    
 </body>
 </html>
