--- a/pagina1.html
+++ b/pagina1.html
@@ -23,7 +23,7 @@
                 <input id="barraPesquisa" type="text" placeholder="Pesquisar produto..." style="font-size: medium;">
             </div>
             <div class="itens-cadastro">
-                <a id="cadastro" class="links" href="/Cadastro"
+                <a id="cadastro" class="links" href="cadastro.html"
                     style="font-family: Arial, Helvetica, sans-serif;">Cadastre-se</a>
                 <a href="/Login"><input id="botaoEntrar" type="button" value="Entrar"></a>
                 <a id="iconeCarrinho" href="#carrinho">
