--- a/pagina3.html
+++ b/pagina3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina1</title>
+    <title>pagina3</title>
     <link rel="stylesheet" href="pagina3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
@@ -23,7 +23,7 @@
                 <input id="barraPesquisa" type="text" placeholder="Pesquisar produto..." style="font-size: medium;">
             </div>
             <div class="itens-cadastro">
-                <a id="cadastro" class="links" href="/Cadastro"
+                <a id="cadastro" class="links" href="cadastro.html"
                     style="font-family: Arial, Helvetica, sans-serif;">Cadastre-se</a>
                 <a href="/Login"><input id="botaoEntrar" type="button" value="Entrar"></a>
                 <a id="iconeCarrinho" href="#carrinho">
@@ -32,12 +32,77 @@
             </div>
         </div>
         <div class="linksheader">
-            <a href="" class="home">Home</a>
-            <a href="" class="links">Produtos</a>
+            <a href="" class="links">Home</a>
+            <a href="" class="produtos">Produtos</a>
             <a href="" class="links">Categorias</a>
             <a href="" class="links">Meus Produtos</a>
         </div>
     </header>
+
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+
+        <div class="sera">
+
+            <div class="logod">
+                <img src="images/logo digital.png" alt="">
+
+                <div class="lorem">
+                    <p>Lorem ipsum dolor sit amet, consectetur <br> adipiscing elit, sed do eiusmod tempor
+                        <br>incididunt ut labore et dolore.
+                    </p>
+                </div>
+
+
+                <div class="logos">
+                    <a href=""><img src="images/logo facebook.png" alt=""></a>
+                    <a href=""><img src="images/logo instagram.png" alt=""></a>
+                    <a href=""><img src="images/logo twitter.png" alt=""></a>
+                </div>
+
+            </div>
+
+            <div class="informaçao">
+                <h3>Informação</h3>
+                <p>Sobre Drip Store</p>
+                <p>Segurança</p>
+                <p>Wishlist</p>
+                <p>Blog</p>
+                <p>Trabalhe conosco</p>
+                <p>Meus Pedidos</p>
+
+            </div>
+
+            <div class="categoria">
+                <h3 class="h3tit">Categorias</h3>
+                <p>Camisetas</p>
+                <p>Calças</p>
+                <p>Bonés</p>
+                <p>Headphones</p>
+                <p>Tênis</p>
+            </div>
+            <div class="contato">
+                <h3 class="h3tit">Contato</h3>
+                <p>Av. Santos Dumont, 1510-1 andar Aldeota, Fortaleza -CE, 60150-161</p>
+                <p>(85) 3051-3411</p>
+            </div>
+        </div>
+
+        <div class="divFinal">
+            <hr style="min-width: 1240px; width: 16px 0px 23px;margin-bottom: 23px;background-color: #ffffff4d;">
+            <p class="copy"> &copy; 2025 Digital College</p>
+        </div>
+    </footer>
     
 </body>
 </html>
