iniciando terceira section

--- a/pagina1.html
+++ b/pagina1.html
@@ -318,7 +318,36 @@
         </div>
     </section>
 
+<section>
 
+<div>
+
+    <img class="teste" src="images/sapato_Air.png" alt="">
+
+<img src="images/ornamento_sapato.png" alt="">
+
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
 
 
 
