--- a/pagina1.html
+++ b/pagina1.html
@@ -33,7 +33,6 @@
         </div>
     </header>
 
-
     <div class="linksheader">
         <a href="" class="home">Home</a>
         <a href="" class="links">Produtos</a>
@@ -41,15 +40,9 @@
         <a href="" class="links">Meus Produtos</a>
     </div>
 
-
-
-
     <section class="carrossel">
 
-
-
         <div id="carouselExample" class="carousel slide" style="position: relative;">
-
 
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active"
@@ -64,11 +57,9 @@
                     aria-label="Slide 5"></button>
             </div>
 
-
-
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/primeiroSlide.png" class="d-block w-100" alt="...">
+                    <img style="height: 650px;" src="images/primeiroSlide.png" class="d-block w-100" alt="...">
 
                     <img class="tenis_banner" src="images/tenisPrimeiroSlide.png" alt="">
                     <img class="ornamento" src="images/Ornament 11.png" alt="">
@@ -87,16 +78,16 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/home-slide-2-PK5EnBAW.jpeg" class="d-block w-100" alt="...">
+                    <img style="height: 650px;" src="images/home-slide-2-PK5EnBAW.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/home-slide-3-C19Cs9Ta.jpeg" class="d-block w-100" alt="...">
+                    <img style="height: 650px;" src="images/home-slide-3-C19Cs9Ta.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/home-slide-4-Cd3KxotW.jpeg" class="d-block w-100" alt="...">
+                    <img style="height: 650px;" src="images/home-slide-4-Cd3KxotW.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="images/home-slide-5-BBEuOExe.jpeg" class="d-block w-100" alt="...">
+                    <img style="height: 650px;" src="images/home-slide-5-BBEuOExe.jpeg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -107,19 +98,12 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-
-
-
-
-
-
         </div>
 
     </section>
 
-    
     <h3>Coleções em Destaque</h3>
-    
+
     <div id="imagens-colecao">
         <div><img src="images/blusacoleçao.png" alt="Blusas">
             <p>Blusas</p>
@@ -136,32 +120,13 @@
             <p>Tenis</p>
         </div>
     </div>
-</div>  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div>
 
     <div id="back"></div>
+
     <section>
 
-        <p class="textocolecao">Coleções em destaque</p>
+        <p class="H1_colecoes">Coleções em destaque</p>
 
         <div class="coleçoes">
             <div class="card">
@@ -169,9 +134,9 @@
                     <div>
                         <P>30% OFF</P>
                     </div>
-                    <h5 class="card-title">Novo drop <br>
+                    <h5 class="card-title titulo_dos_cards_colecao">Novo drop <br>
                         Supreme</h5>
-                    <div><img class="imagem_dos_cards" src="images/blusaSupreme.png" alt=""></div>
+                    <div><img class="imagem_dos_cards_colecoes" src="images/blusaSupreme.png" alt=""></div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
@@ -181,9 +146,9 @@
                     <div>
                         <P>30% OFF</P>
                     </div>
-                    <h5 class="card-title">Coleção <br>
+                    <h5 class="card-title titulo_dos_cards_colecao">Coleção <br>
                         Adidas</h5>
-                    <div><img class="imagem_dos_cards" src="images/cardTenis.png" alt=""></div>
+                    <div><img class="imagem_dos_cards_colecoes" src="images/cardTenis.png" alt=""></div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
@@ -193,9 +158,9 @@
                     <div>
                         <P>30% OFF</P>
                     </div>
-                    <h5 class="card-title">Novo <br>
+                    <h5 class="card-title titulo_dos_cards_colecao">Novo <br>
                         Beats Bass</h5>
-                    <div><img class="imagem_dos_cards" src="images/cardFone.png" alt=""></div>
+                    <div><img class="imagem_dos_cards_colecoes" src="images/cardFone.png" alt=""></div>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
@@ -205,10 +170,10 @@
 
     <section class="produtos_em_alta">
         <div>
-            <div class="titulocolecao">
-                <h1 class="textocolecao">Produtos em alta</h1>
-                <div><a class="linkcolecao" href="">Ver Todos </a>
-                    <img src="images/seta.png" alt="">
+            <div class="titulo_produtos_em_alta">
+                <h1 class="H1_em_alta">Produtos em alta</h1>
+                <div><a class="link_produtos_em_alta" href="">Ver Todos
+                        <img src="images/seta.png" alt=""></a>
                 </div>
             </div>
 
@@ -217,10 +182,10 @@
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
                         <p class="promoçao_em_alta">30% OFF</p>
-                        <p class="card-title">Tênis</p>
+                        <!-- <p class="card-title">Tênis</p> -->
                         <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p class="paragrafo_em_alta">R$ 200</p>
+                            <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -230,10 +195,10 @@
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
                         <p class="promoçao_em_alta">30% OFF</p>
-                        <p class="card-title">Tênis</p>
+                        <!-- <p class="card-title">Tênis</p> -->
                         <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p class="paragrafo_em_alta">R$ 200</p>
+                            <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -242,10 +207,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
-                        <p class="card-title">Tênis</p>
+                        <!-- <p class="card-title">Tênis</p> -->
                         <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p class="paragrafo_em_alta">R$ 200</p>
+                            <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -254,10 +219,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
-                        <p class="card-title">Tênis</p>
+                        <!-- <p class="card-title">Tênis</p> -->
                         <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                         <div class="presos">
-                            <p class="paragrafo_em_alta">R$ 200</p>
+                            <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
                         </div>
                     </div>
@@ -269,10 +234,10 @@
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_em_alta">
-                    <p class="card-title">Tênis</p>
+                    <!-- <p class="card-title">Tênis</p> -->
                     <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p class="paragrafo_em_alta">R$ 200</p>
+                        <p class="valor_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
@@ -282,10 +247,22 @@
             <div class="card" style="width: 18rem;">
                 <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_em_alta">
-                    <p class="card-title">Tênis</p>
+                    <!-- <p class="card-title">Tênis</p> -->
                     <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p class="paragrafo_em_alta">R$ 200</p>
+                        <p class="valor_em_alta">R$ 200</p>
+                        <p class="descontos">R$ 100</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <div class="card-body body_em_alta">
+                    <!-- <p class="card-title">Tênis</p> -->
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                    <div class="presos">
+                        <p class="valor_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
@@ -297,19 +274,7 @@
                     <p class="card-title">Tênis</p>
                     <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
                     <div class="presos">
-                        <p class="paragrafo_em_alta">R$ 200</p>
-                        <p class="descontos">R$ 100</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body body_em_alta">
-                    <p class="card-title">Tênis</p>
-                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
-                    <div class="presos">
-                        <p class="paragrafo_em_alta">R$ 200</p>
+                        <p class="valor_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
                     </div>
                 </div>
@@ -318,61 +283,18 @@
         </div>
     </section>
 
-<section>
-
-<div>
-
-    <img class="teste" src="images/sapato_Air.png" alt="">
-
-<img src="images/ornamento_sapato.png" alt="">
-
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <section>
+        <div>
+            <img class="teste" src="images/sapato_Air.png" alt="">
+            <img src="images/ornamento_sapato.png" alt="">
+        </div>
+    </section>
 
     <footer>
 
         <div class="geralFooter">
 
-            <div class="logod">
+            <div class="logo_footer_digital">
                 <img src="images/logo digital.png" alt="">
 
                 <div class="lorem">
@@ -382,7 +304,7 @@
                 </div>
 
 
-                <div class="logos">
+                <div class="logos_redes_sociais">
                     <a href=""><img src="images/logo facebook.png" alt=""></a>
                     <a href=""><img src="images/logo instagram.png" alt=""></a>
                     <a href=""><img src="images/logo twitter.png" alt=""></a>
@@ -398,7 +320,6 @@
                 <p>Blog</p>
                 <p>Trabalhe conosco</p>
                 <p>Meus Pedidos</p>
-
             </div>
 
             <div class="categoria">
@@ -421,18 +342,6 @@
             <p class="copy"> &copy; 2025 Digital College</p>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
