finalizando ultima section

--- a/pagina1.html
+++ b/pagina1.html
@@ -283,10 +283,22 @@
         </div>
     </section>
 
-    <section>
+    <section class="ultima_section">
+
+
         <div>
-            <img class="teste" src="images/sapato_Air.png" alt="">
-            <img src="images/ornamento_sapato.png" alt="">
+            <img class="sapato" src="images/sapato_Air.png" alt="">
+            <img class="ornamento_ult" src="images/ornamento_sapato.png" alt="">
+        </div>
+
+        <div class="texto_colecionador">
+            <p class="ultima_oferta">Oferta especial</p>
+            <h2 class="titulo_ultima_section">Air Jordan edição de
+                colecionador</h2>
+            <p class="paragrafo_ultima_section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            </p>
+            <button class="botao1">Ver Ofertas</button>
         </div>
     </section>
 
