--- a/pagina1.html
+++ b/pagina1.html
@@ -179,11 +179,11 @@
 
             <div class="em_alta">
                 <div class="card" style="width: 18rem;">
-                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                   <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
                         <p class="promoçao_em_alta">30% OFF</p>
                         <!-- <p class="card-title">Tênis</p> -->
-                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p></a>
                         <div class="presos">
                             <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
@@ -192,11 +192,11 @@
                 </div>
 
                 <div class="card" style="width: 18rem;">
-                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                   <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
                         <p class="promoçao_em_alta">30% OFF</p>
                         <!-- <p class="card-title">Tênis</p> -->
-                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p></a>
                         <div class="presos">
                             <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
@@ -205,10 +205,10 @@
                 </div>
 
                 <div class="card" style="width: 18rem;">
-                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                   <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
                         <!-- <p class="card-title">Tênis</p> -->
-                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p></a>
                         <div class="presos">
                             <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
@@ -217,10 +217,10 @@
                 </div>
 
                 <div class="card" style="width: 18rem;">
-                    <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                   <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                     <div class="card-body body_em_alta">
                         <!-- <p class="card-title">Tênis</p> -->
-                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p></a>
                         <div class="presos">
                             <p class="valor_em_alta">R$ 200</p>
                             <p class="descontos">R$ 100</p>
@@ -232,10 +232,10 @@
 
         <div class="em_alta">
             <div class="card" style="width: 18rem;">
-                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+               <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_em_alta">
                     <!-- <p class="card-title">Tênis</p> -->
-                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p></a>
                     <div class="presos">
                         <p class="valor_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
@@ -245,10 +245,10 @@
 
 
             <div class="card" style="width: 18rem;">
-                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <a href="#"><img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_em_alta">
                     <!-- <p class="card-title">Tênis</p> -->
-                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p></a>
                     <div class="presos">
                         <p class="valor_em_alta">R$ 200</p>
                         <p class="descontos">R$ 100</p>
@@ -257,28 +257,30 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                <a href="#"> <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
+                    <div class="card-body body_em_alta">
+                        <!-- <p class="card-title">Tênis</p> -->
+                        <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
+                </a>
+                <div class="presos">
+                    <p class="valor_em_alta">R$ 200</p>
+                    <p class="descontos">R$ 100</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <a href="#"><img src="images/Teniskswiss.png" class="card-img-top" alt="...">
                 <div class="card-body body_em_alta">
                     <!-- <p class="card-title">Tênis</p> -->
                     <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
-                    <div class="presos">
-                        <p class="valor_em_alta">R$ 200</p>
-                        <p class="descontos">R$ 100</p>
-                    </div>
-                </div>
+            </a>
+            <div class="presos">
+                <p class="valor_em_alta">R$ 200</p>
+                <p class="descontos">R$ 100</p>
             </div>
-
-            <div class="card" style="width: 18rem;">
-                <img src="images/Teniskswiss.png" class="card-img-top" alt="...">
-                <div class="card-body body_em_alta">
-                    <p class="card-title">Tênis</p>
-                    <p class="card-text texto_em_alta">K-Swiss V8 - Masculino</p>
-                    <div class="presos">
-                        <p class="valor_em_alta">R$ 200</p>
-                        <p class="descontos">R$ 100</p>
-                    </div>
-                </div>
-            </div>
+        </div>
+        </div>
         </div>
         </div>
     </section>
@@ -295,7 +297,8 @@
             <p class="ultima_oferta">Oferta especial</p>
             <h2 class="titulo_ultima_section">Air Jordan edição de
                 colecionador</h2>
-            <p class="paragrafo_ultima_section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            <p class="paragrafo_ultima_section">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
             </p>
             <button class="botao1">Ver Ofertas</button>
