--- a/pagina3.html
+++ b/pagina3.html
@@ -38,6 +38,8 @@
             <a href="" class="links">Meus Produtos</a>
         </div>
     </header>
+
+
     <div class="div-do-tenis">
         <div class="barra-especificaçoes">
             <p><strong>Home</strong> / Produtos / Tênis / Nike / Tênis Nike Revolution 6 Next Nature Masculino</p>
@@ -45,17 +47,21 @@
         <div class="especificacoes">
             <div class="view-do-produto">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner w-100">
+                    <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="images/tenis carrossel.png" class="d-block w-100 carrossel-image" alt="...">
+                            <img src="images/tenis carrossel.png" alt="...">
                         </div>
-                        <div class="carousel-item">
-                            <img src="images/tenis carrossel.png" class="d-block w-100" alt="..."
-                                style="background-color: rgba(255, 232, 188, 1);">
+                        <div class="carousel-item slide2">
+                            <img class="imagem_carrossel_2" src="images/tenis carrossel.png" alt="..." ">
                         </div>
-                        <div class="carousel-item">
-                            <img src="images/tenis carrossel.png" class="d-block w-100" alt="..."
-                                style="background-color: rgba(255, 192, 188, 1);">
+                        <div class=" carousel-item slide3">
+                            <img class="imagem_carrossel_3" src="images/tenis carrossel.png" alt="...">
+                        </div>
+                        <div class=" carousel-item slide4">
+                            <img class="imagem_carrossel_3" src="images/tenis carrossel.png" alt="...">
+                        </div>
+                        <div class=" carousel-item slide5">
+                            <img class="imagem_carrossel_3" src="images/tenis carrossel.png" alt="...">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
